--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
 	<meta name="author" content="Mozamel Saber">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mozamel Saber: Home</title>
-	<link rel="icon" type="https://dl.dropbox.com/s/hw0arhgap59q15f/favicon%20%282%29.ico" href="favicon.ico"/>
+	<link rel="icon" type="mz.ico" href="favicon.ico"/>
     <!-- Bootstrap FrameWork -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-	<link rel="stylesheet" href="https://dl.dropbox.com/s/cfbstwbxey8z36c/bootstrap.css">
-    <link rel="stylesheet" href="https://dl.dropbox.com/s/x26w8nuggl741e0/Main_StyleSheet.css">
-	<link rel="stylesheet" href="https://dl.dropbox.com/s/jmxnwy9ln2f7vxb/button.css">
+	<link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="Main_StyleSheet.css">
+	<link rel="stylesheet" href="button.css">
 	<!--<script>setTimeout(function(){window.location.href='simple.html'},43000);</script>-->
-	<script src="https://dl.dropbox.com/s/6yde7wwnp0xfl8p/bootstrap.js"></script>
+	<script src="bootstrap.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<script src="https://dl.dropbox.com/s/072o9557tm8m5uk/jquery.js"></script>
-	<script src="https://dl.dropbox.com/s/wfdiumu1kza0t3l/Main.js"></script>
+	<script src="jquery.js"></script>
+	<script src="Main.js"></script>
 	<script type="text/javascript" src="Audio-HTML5.js"></script>
 </head>
 <body class="bacc">
 <h1 style="visibility: hidden;">Mozamel Saber</h1>
 <!-- Background Full Size Responsive Image -->
-<img alt="full screen background image" src="https://dl.dropbox.com/s/xb0k38i6b799luw/background.jpg" id="full-screen-background-image" /> 
+<img alt="full screen background image" src="background.jpg" id="full-screen-background-image" /> 
 <!-- Buttons -->
 	<div class="wrap">
-  		<a href="https://dl.dropbox.com/s/7ymuu8j8e17inqv/Cool.html?dl=0" class="button">Cool Site!</a>
-  		<a href="https://dl.dropbox.com/s/ss1xic5tuul9axv/simple.html?dl=0" class="button2">Simple Site</a>
+  		<a href="Cool.html" class="button">Cool Site!</a>
+  		<a href="simple.html" class="button2">Simple Site</a>
 	</div>
 
 
@@ -52,7 +52,7 @@
                     <!-- LOGO -->
 
                     <!-- TEXT BASED LOGO -->
-                    <a class="navbar-brand" href="https://dl.dropbox.com/s/cvr4fei0l46v81o/index.html">lemazoM <span>rebaS</span></a>
+                    <a class="navbar-brand" href="index.html">lemazoM <span>rebaS</span></a>
 
                     <!-- IMG BASED LOGO  -->
                     <!--  <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo"></a> -->
