--- a/Cool.html
+++ b/Cool.html
@@ -14,20 +14,20 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <!-- Global CSS -->
-    <link rel="stylesheet" href="https://dl.dropbox.com/s/4sjmc31e98vz5ma/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <!-- Plugins CSS -->
-    <link rel="stylesheet" href="https://dl.dropbox.com/s/wolauwaa9jvs5u6/font-awesome.css">
-    <link rel="stylesheet" href="https://dl.dropbox.com/s/a1ybvot3nut61d5/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <!-- github acitivity css -->
-    <link rel="stylesheet" href="https://dl.dropbox.com/s/y94k7t5xmrmcmo3/github-activity-0.1.1.min.css">
-    <link rel="stylesheet" href="https://dl.dropbox.com/s/bhx6q8vsixij50n/octicons.min.css">
+    <link rel="stylesheet" href="assets/plugins/github-activity/dist/github-activity-0.1.1.min.css">
+    <link rel="stylesheet" href="assets/plugins/github-activity/dist/octicons/octicons.min.css">
 
 
     <!-- Theme CSS -->
-    <link id="theme-style" rel="stylesheet" href="https://dl.dropbox.com/s/5nvrmpcobjfv2iw/styles.css">
-    <link id="theme-style" rel="stylesheet" href="https://dl.dropbox.com/s/e8rz7tebrs99030/background.css">
+    <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
+    <link id="theme-style" rel="stylesheet" href="assets/css/background.css">
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -50,7 +50,7 @@
 
     <div class="container">
 	
-        <img class="profile-image img-responsive pull-left" src="https://dl.dropbox.com/s/ewn7slbfuamlkgg/profilee.jpg" alt="Mozamel Saber" />
+        <img class="profile-image img-responsive pull-left" src="assets/images/profilee.jpg" alt="Mozamel Saber" />
         <div class="profile-content pull-left">
             <h1 class="name">Mozamel Saber</h1>
             <h2 class="desc">Software Engineer</h2>
@@ -142,7 +142,7 @@ I &lt;3 tech, but pass time away from computers as an aspiring amateur
                             <p class="summary">ERPNext helps you take full control of your business. It is as powerful as it is easy to use.</p>
                             <div class="featured-image">
                                 <a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-products-velocity/" target="_blank">
-                                    <img class="img-responsive project-image" src="https://dl.dropbox.com/s/aleb3gmma1sc8cd/ERP.png" alt="project name" />
+                                    <img class="img-responsive project-image" src="assets/images/projects/ERP.png" alt="project name" />
                                 </a>
                                 <div class="ribbon">
                                     <div class="text">New</div>
@@ -158,7 +158,7 @@ I &lt;3 tech, but pass time away from computers as an aspiring amateur
                         <hr class="divider" />
                         <div class="item row">
                             <a class="col-md-4 col-sm-4 col-xs-12" href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-mobile-apps-atom/" target="_blank">
-                                <img class="img-responsive project-image" src="https://dl.dropbox.com/s/oddp5y0jp8zfndi/afgcal.png" alt="project name" />
+                                <img class="img-responsive project-image" src="assets/images/projects/afgcal.png" alt="project name" />
                             </a>
                             <div class="desc col-md-8 col-sm-8 col-xs-12">
                                 <h3 class="title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-mobile-apps-atom/" target="_blank">Afghan Calculator-Android</a></h3>
@@ -168,7 +168,7 @@ I &lt;3 tech, but pass time away from computers as an aspiring amateur
                         </div><!--//item-->
 							<div class="item row">
                             <a class="col-md-4 col-sm-4 col-xs-12" href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-startups-tempo/" target="_blank">
-                                <img class="img-responsive project-image" src="https://dl.dropbox.com/s/f5wnu6x7mo31q9k/KL.png" alt="project name" />
+                                <img class="img-responsive project-image" src="assets/images/projects/KL.png" alt="project name" />
                             </a>
                             <div class="desc col-md-8 col-sm-8 col-xs-12">
                                 <h3 class="title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-startups-tempo/" target="_blank">KeyLogger</a></h3>
@@ -178,7 +178,7 @@ I &lt;3 tech, but pass time away from computers as an aspiring amateur
                         </div><!--//item-->
                         <div class="item row">
                             <a class="col-md-4 col-sm-4 col-xs-12" href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-web-development-agencies-devstudio/" target="_blank">
-                                <img class="img-responsive project-image" src="https://dl.dropbox.com/s/27ya5opt28kxvol/afgmem.png" alt="project name" />
+                                <img class="img-responsive project-image" src="assets/images/projects/afgmem.png" alt="project name" />
                             </a>
                             <div class="desc col-md-8 col-sm-8 col-xs-12">
                                 <h3 class="title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-web-development-agencies-devstudio/" target="_blank">Afghan MemeCreator- Android</a></h3>
@@ -481,15 +481,15 @@ I &lt;3 tech, but pass time away from computers as an aspiring amateur
 </footer><!--//footer-->
 
 <!-- Javascript -->
-<script type="text/javascript" src="https://dl.dropbox.com/s/n4vie9kzpy523tn/jquery-1.11.2.min.js"></script>
-<script type="text/javascript" src="https://dl.dropbox.com/s/zd8me1nd4z26nfx/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="https://dl.dropbox.com/s/s8e2723cxb3o0wj/bootstrap.min.js"></script>
-<script type="text/javascript" src="https://dl.dropbox.com/s/61tb85b9klkewpv/jquery.rss.min.js"></script>
+<script type="text/javascript" src="assets/plugins/jquery-1.11.2.min.js"></script>
+<script type="text/javascript" src="assets/plugins/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="bootstrap.min.js"></script>
+<script type="text/javascript" src="assets/plugins/jquery-rss/dist/jquery.rss.min.js"></script>
 <!-- github activity plugin -->
-<script type="text/javascript" src="https://dl.dropbox.com/s/9rvamf9ybuvcjpz/mustache.min.js"></script>
-<script type="text/javascript" src="https://dl.dropbox.com/s/0h0j0g9fwubcd08/github-activity-0.1.1.min.js"></script>
+<script type="text/javascript" src="assets/plugins/github-activity/dist/mustache/mustache.min.js"></script>
+<script type="text/javascript" src="assets/plugins/github-activity/dist/github-activity-0.1.1.min.js"></script>
 <!-- custom js -->
-<script type="text/javascript" src="https://dl.dropbox.com/s/vmnoj8vb759sqwq/main.js"></script>
+<script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html> 
 
