--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body class="bacc">
 <h1 style="visibility: hidden;">Mozamel Saber</h1>
 <!-- Background Full Size Responsive Image -->
-<img alt="full screen background image" src="background.jpg" id="full-screen-background-image" /> 
+<img alt="full screen background image" src="background.jpg" id="full-screen-background-image" />
 <!-- Buttons -->
 	<div class="wrap">
   		<a href="Cool.html" class="button">Cool Site!</a>
@@ -61,8 +61,8 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul id="top-menu" class="nav navbar-nav navbar-right main_nav">
-                        <li ><a target="_top" href="mailto:Mozamelsaber@gmail.com">Quick Contact</a></li>
-                        
+                        <li ><a target="_top" href="contact.html">Quick Contact</a></li>
+
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -79,9 +79,9 @@
 </div>
 
     <div id="content">
-		
 
-		
+
+
 
    </div>
 
