--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,8 @@
     <meta name="author" content="">
 
     <title>Contact Me</title>
-
+    
+    <link rel="icon" href="mz.ico" type="image/x-icon"/>
     <!-- Bootstrap FrameWork -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
