--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="Mozamel Saber">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mozamel Saber: Home</title>
-	<link rel="icon" type="mz.ico" href="favicon.ico"/>
+  <link rel="icon" href="mz.ico" type="image/x-icon"/>
     <!-- Bootstrap FrameWork -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
