--- a/Cool.html
+++ b/Cool.html
@@ -138,10 +138,10 @@ I &lt;3 tech, but pass time away from computers as an aspiring amateur
                     <div class="content">
 
                         <div class="item featured text-center">
-                            <h3 class="title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-products-velocity/" target="_blank">ERPNext</a></h3>
+                            <h3 class="title"><a href="https://erpnext.com/" target="_blank">ERPNext</a></h3>
                             <p class="summary">ERPNext helps you take full control of your business. It is as powerful as it is easy to use.</p>
                             <div class="featured-image">
-                                <a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-products-velocity/" target="_blank">
+                                <a href="https://erpnext.com/" target="_blank">
                                     <img class="img-responsive project-image" src="assets/images/projects/ERP.png" alt="project name" />
                                 </a>
                                 <div class="ribbon">
@@ -153,37 +153,37 @@ I &lt;3 tech, but pass time away from computers as an aspiring amateur
                                 <p>Installed Configured and trained ERPNext to a small business here in Kabul.</p>
                                 <p>Also Set-up all there ERP Needs. ERPNext is open source and infinitely extensible. Customize it, build upon it, add your own apps built with Frappé Framework.</p>
                             </div><!--//desc-->
-                            <a class="btn btn-cta-secondary" href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-products-velocity/" target="_blank"><i class="fa fa-thumbs-o-up"></i> Back my project</a>
+                            <a class="btn btn-cta-secondary" href="#" target="_blank"><i class="fa fa-thumbs-o-up"></i> Back my project</a>
                         </div><!--//item-->
                         <hr class="divider" />
                         <div class="item row">
-                            <a class="col-md-4 col-sm-4 col-xs-12" href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-mobile-apps-atom/" target="_blank">
+                            <a class="col-md-4 col-sm-4 col-xs-12" href="#" target="_blank">
                                 <img class="img-responsive project-image" src="assets/images/projects/afgcal.png" alt="project name" />
                             </a>
                             <div class="desc col-md-8 col-sm-8 col-xs-12">
-                                <h3 class="title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-mobile-apps-atom/" target="_blank">Afghan Calculator-Android</a></h3>
+                                <h3 class="title"><a href="#" target="_blank">Afghan Calculator-Android</a></h3>
                                 <p>Afghani Calculator For Simple Calculations.<br>For Afghans THIS IS AFGHAN STYLE!</p>
-                                <p><a class="more-link" href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-mobile-apps-atom/" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
+                                <p><a class="more-link" href="#" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
                             </div><!--//desc-->
                         </div><!--//item-->
 							<div class="item row">
-                            <a class="col-md-4 col-sm-4 col-xs-12" href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-startups-tempo/" target="_blank">
-                                <img class="img-responsive project-image" src="assets/images/projects/KL.png" alt="project name" />
+                            <a class="col-md-4 col-sm-4 col-xs-12" href="#" target="_blank">
+                                <img class="img-responsive project-image" src="assets/images/projects/KL.PNG" alt="project name" />
                             </a>
                             <div class="desc col-md-8 col-sm-8 col-xs-12">
-                                <h3 class="title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-startups-tempo/" target="_blank">KeyLogger</a></h3>
+                                <h3 class="title"><a href="" target="_blank">KeyLogger</a></h3>
                                 <p>Simple KeyLogger in Python For Windows</p>
-                                <p><a class="more-link" href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-startups-tempo/" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
+                                <p><a class="more-link" href="" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
                             </div><!--//desc-->
                         </div><!--//item-->
                         <div class="item row">
-                            <a class="col-md-4 col-sm-4 col-xs-12" href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-web-development-agencies-devstudio/" target="_blank">
+                            <a class="col-md-4 col-sm-4 col-xs-12" href="" target="_blank">
                                 <img class="img-responsive project-image" src="assets/images/projects/afgmem.png" alt="project name" />
                             </a>
                             <div class="desc col-md-8 col-sm-8 col-xs-12">
-                                <h3 class="title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-web-development-agencies-devstudio/" target="_blank">Afghan MemeCreator- Android</a></h3>
+                                <h3 class="title"><a href="" target="_blank">Afghan MemeCreator- Android</a></h3>
                                 <p>Just For Fun, With Storage of Funny Afghani Memes</p>
-                                <p><a class="more-link" href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-web-development-agencies-devstudio/" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
+                                <p><a class="more-link" href="" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
                             </div><!--//desc-->
                         </div><!--//item-->
 
