--- a/Cool.html
+++ b/Cool.html
@@ -42,7 +42,9 @@
 <div class="sky">
     <div class="moon"></div>
     <div class="clouds_one"></div>
-	<div> Website is being updated </div>
+	<div align="center">
+		<h1>Website is being updated </h1>
+	</div>
     <div class="clouds_two"></div>
     <div class="clouds_three"></div>
   </div>
