--- a/Cool.html
+++ b/Cool.html
@@ -43,7 +43,7 @@
     <div class="moon"></div>
     <div class="clouds_one"></div>
 	<div align="center">
-		<h1>Website is being updated </h1>
+		<h1 style="color: #f44259">This section is being updated </h1>
 	</div>
     <div class="clouds_two"></div>
     <div class="clouds_three"></div>
