--- a/Cool.html
+++ b/Cool.html
@@ -87,7 +87,7 @@
  </br>
                             Classification:   <strike>Genius</strike> hmmm <strike><b>Human</b> </strike> Let's say graduated from high school</br>
                             Current Major:  Computer Science</br>
-                            Occupation: Software Engineer || Web Developer || IT Specialit in Baryal Technologies
+                            Occupation: Software Engineer || Web Developer || TECHNICIAN || IT Specialist in Baryal Technologies
                         </p>
                         <p> Welcome to my remarkable home on the WEB.<br><br>
 
