--- a/Cool.html
+++ b/Cool.html
@@ -87,7 +87,7 @@
  </br>
                             Classification:   <strike>Genius</strike> hmmm <strike><b>Human</b> </strike> Let's say graduated from high school</br>
                             Current Major:  Computer Science</br>
-                            Occupation: Software Engineer || Web Developer || TECHNICIAN || IT Specialist in Baryal Technologies
+                            Occupation: Software Engineer || Web Developer || Technician || IT Specialist in Baryal Technologies
                         </p>
                         <p> Welcome to my remarkable home on the WEB.<br><br>
 
@@ -188,7 +188,17 @@ I &lt;3 tech, but pass time away from computers as an aspiring amateur
                                 <p><a class="more-link" href="" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
                             </div><!--//desc-->
                         </div><!--//item-->
-
+			<div class="item row">
+                            <a class="col-md-4 col-sm-4 col-xs-12" href="" target="_blank">
+                                <img class="img-responsive project-image" src="assets/images/projects/EA.png" alt="project name" />
+                            </a>
+                            <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                <h3 class="title"><a href="" target="_blank">EasyAccounting - Windows Application</a></h3>
+                                <p>Basically, it is a software that can manage inventory, sales, purchases, profit reports, and other essential functions needed for small businesses. </p>
+                                <p><a class="more-link" href="" target="_blank"><i class="fa fa-external-link"></i> Find out more</a></p>
+                            </div><!--//desc-->
+                        </div><!--//item-->
+			    
                     </div><!--//content-->
                 </div><!--//section-inner-->
             </section><!--//section-->
