--- a/Cool.html
+++ b/Cool.html
@@ -190,7 +190,7 @@ I &lt;3 tech, but pass time away from computers as an aspiring amateur
                         </div><!--//item-->
 			<div class="item row">
                             <a class="col-md-4 col-sm-4 col-xs-12" href="" target="_blank">
-                                <img class="img-responsive project-image" src="assets/images/projects/EA.png" alt="project name" />
+                                <img class="img-responsive project-image" src="assets/images/projects/EA.PNG" alt="project name" />
                             </a>
                             <div class="desc col-md-8 col-sm-8 col-xs-12">
                                 <h3 class="title"><a href="" target="_blank">EasyAccounting - Windows Application</a></h3>
